force-app/main/default/objects/IM_Notifications__c/IM_Notifications__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>IM_Notifications</label>
</CustomObject>