force-app/main/default/objects/IM_Notifications__c/fields/AppointmentAssigned__c.field-meta.xml
<CustomField>
    <fullName>AppointmentAssigned__c</fullName>
    <label>Appointment Assigned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>