force-app/main/default/objects/IM_Notifications__c/fields/AppointmentCancelled__c.field-meta.xml
<CustomField>
    <fullName>AppointmentCancelled__c</fullName>
    <label>Appointment Cancelled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>