force-app/main/default/objects/IM_Notifications__c/fields/CareService__c.field-meta.xml
<CustomField>
    <fullName>CareService__c</fullName>
    <label>CareService</label>
    <type>TextArea</type>
</CustomField>