force-app/main/default/objects/IM_Notifications__c/fields/Client_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Client_Assignment__c</fullName>
    <label>Client Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>