force-app/main/default/objects/IM_Notifications__c/fields/Client_List__c.field-meta.xml
<CustomField>
    <fullName>Client_List__c</fullName>
    <label>Client List</label>
    <type>TextArea</type>
</CustomField>