force-app/main/default/objects/IM_Notifications__c/fields/Clients_Reassigned__c.field-meta.xml
<CustomField>
    <fullName>Clients_Reassigned__c</fullName>
    <label>Clients Reassigned</label>
    <type>TextArea</type>
</CustomField>