force-app/main/default/objects/IM_Notifications__c/fields/Exceptional_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Exceptional_Purchase__c</fullName>
    <label>Exceptional Purchase</label>
    <type>TextArea</type>
</CustomField>