force-app/main/default/objects/IM_Notifications__c/fields/ExperienceVariationCreated__c.field-meta.xml
<CustomField>
    <fullName>ExperienceVariationCreated__c</fullName>
    <label>Experience Variation Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>