force-app/main/default/objects/IM_Notifications__c/fields/Expiration_List__c.field-meta.xml
<CustomField>
    <fullName>Expiration_List__c</fullName>
    <label>Expiration List</label>
    <type>TextArea</type>
</CustomField>