force-app/main/default/objects/IM_Notifications__c/fields/Feed__c.field-meta.xml
<CustomField>
    <fullName>Feed__c</fullName>
    <label>Feed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>