force-app/main/default/objects/IM_Notifications__c/fields/MIY__c.field-meta.xml
<CustomField>
    <fullName>MIY__c</fullName>
    <label>NY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>