force-app/main/default/objects/IM_Notifications__c/fields/OrderCancelled__c.field-meta.xml
<CustomField>
    <fullName>OrderCancelled__c</fullName>
    <label>Order Cancelled</label>
    <length>255</length>
    <type>Text</type>
</CustomField>