force-app/main/default/objects/IM_Notifications__c/fields/OrderDelay__c.field-meta.xml
<CustomField>
    <fullName>OrderDelay__c</fullName>
    <label>Order Delay</label>
    <length>255</length>
    <type>Text</type>
</CustomField>