force-app/main/default/objects/IM_Notifications__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <label>Request</label>
    <type>TextArea</type>
</CustomField>