force-app/main/default/objects/IM_Notifications__c/fields/Request_Manager__c.field-meta.xml
<CustomField>
    <fullName>Request_Manager__c</fullName>
    <label>Request Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>