force-app/main/default/objects/IM_Notifications__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <label>Survey</label>
    <type>TextArea</type>
</CustomField>