force-app/main/default/objects/IM_Notifications__c/fields/SurveyManager__c.field-meta.xml
<CustomField>
    <fullName>SurveyManager__c</fullName>
    <label>SurveyManager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>