force-app/main/default/objects/IM_Notifications__c/fields/VariationMemberNomination__c.field-meta.xml
<CustomField>
    <fullName>VariationMemberNomination__c</fullName>
    <label>VariationMemberNomination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>