force-app/main/default/objects/IM_Notifications__c/fields/VariationMemberPending__c.field-meta.xml
<CustomField>
    <fullName>VariationMemberPending__c</fullName>
    <label>VariationMemberPending</label>
    <length>255</length>
    <type>Text</type>
</CustomField>