force-app/main/default/objects/IM_Notifications__c/fields/WardrobingLike__c.field-meta.xml
<CustomField>
    <fullName>WardrobingLike__c</fullName>
    <label>WardrobingLike</label>
    <length>255</length>
    <type>Text</type>
</CustomField>