force-app/main/default/objects/IM_Notifications__c/listViews/IM_NotificationsAll.listView-meta.xml
<ListView>
    <fullName>IM_NotificationsAll</fullName>
    <columns>NAME</columns>
    <columns>WardrobingLike__c</columns>
    <columns>AppointmentAssigned__c</columns>
    <columns>AppointmentCancelled__c</columns>
    <columns>CareService__c</columns>
    <columns>CareServiceComment__c</columns>
    <columns>Client_Assignment__c</columns>
    <columns>Client_List__c</columns>
    <columns>Clients_Reassigned__c</columns>
    <columns>Exceptional_Purchase__c</columns>
    <columns>MIY__c</columns>
    <columns>Order__c</columns>
    <columns>Request__c</columns>
    <columns>Survey__c</columns>
    <columns>SurveyManager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>